--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 								<picture class="goods__picture">
 									<source
 										srcset="img/goods__cup-color_mb.jpg"
-										media="(min-width:768px)"
+										media="(max-width:768px)"
 									/>
 									<img
 										src="img/goods__cup-color_ds.jpg"
@@ -160,10 +160,10 @@
 								<picture class="goods__picture">
 									<source
 										srcset="img/goods__cup-pink_mb.jpg"
-										media="(min-width:768px)"
+										media="(max-width:768px)"
 									/>
 									<img
-										src="img/goods__cup-pink_mb.jpg"
+										src="img/goods__cup-pink_ds.jpg"
 										alt=" коктейль собери сам"
 									/>
 								</picture>
@@ -184,7 +184,7 @@
 								<picture class="goods__picture">
 									<source
 										srcset="img/goods__cup-violet_mb.jpg"
-										media="(min-width:768px)"
+										media="(max-width:768px)"
 									/>
 									<img
 										src="img/goods__cup-violet_ds.jpg"
@@ -208,7 +208,7 @@
 								<picture class="goods__picture">
 									<source
 										srcset="img/goods__cup-green_mb.jpg"
-										media="(min-width:768px)"
+										media="(max-width:768px)"
 									/>
 									<img
 										src="img/goods__cup-green_ds.jpg"
@@ -232,10 +232,10 @@
 								<picture class="goods__picture">
 									<source
 										srcset="img/goods__cup-yellow_mb.jpg"
-										media="(min-width:768px)"
+										media="(max-width:768px)"
 									/>
 									<img
-										src="img/goods__cup-yellow_mb.jpg"
+										src="img/goods__cup-yellow_ds.jpg"
 										alt=" коктейль собери сам"
 									/>
 								</picture>
@@ -257,7 +257,7 @@
 								<picture class="goods__picture">
 									<source
 										srcset="img/goods__cup-dark-green_mb.jpg"
-										media="(min-width:768px)"
+										media="(max-width:768px)"
 									/>
 									<img
 										src="img/goods__cup-dark-green_ds.jpg"
@@ -281,7 +281,7 @@
 								<picture class="goods__picture">
 									<source
 										srcset="img/goods__cup-orange_mb.jpg"
-										media="(min-width:768px)"
+										media="(max-width:768px)"
 									/>
 									<img
 										src="img/goods__cup-orange_ds.jpg"
@@ -305,7 +305,7 @@
 								<picture class="goods__picture">
 									<source
 										srcset="img/goods__cup-dark-orange_mb.jpg"
-										media="(min-width:768px)"
+										media="(max-width:768px)"
 									/>
 									<img
 										src="img/goods__cup-dark-orange_ds.jpg"
