--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
 										<p class="coctail__price text-red">260 ₽</p>
 										<p class="coctail__size">300мл</p>
 									</div>
-									<button class="btn coctail__btn" type="button">
+									<button
+										class="btn coctail__btn coctail__btn-make"
+										type="button"
+									>
 										Добавить
 									</button>
 								</div>
@@ -182,6 +185,86 @@
 			</div>
 		</footer>
 		<!-- /footer -->
+
+		<!-- modal -->
+		<div class="modal modal__order">
+			<div class="modal__main">
+				<div class="order">
+					<h2 class="order__title">
+						Корзина<sup class="text-red order__calc">(2)</sup>
+					</h2>
+					<ul class="order__list">
+						<li class="order__item">
+							<img
+								src="img/order-img-1.jpg"
+								alt="название коктеля"
+								class="order__img"
+							/>
+							<div class="order__info">
+								<h3 class="order__name">Манго смузи</h3>
+								<ul class="order__topping-list">
+									<li class="order__topping-item">300мл</li>
+									<li class="order__topping-item">Биоразлагаемый стакан</li>
+									<li class="order__topping-item">Лед</li>
+									<li class="order__topping-item">Мята</li>
+								</ul>
+							</div>
+							<button
+								class="order__item-delete"
+								type="button"
+								aria-label="удалить коктаиль из корзины"
+							></button>
+							<p class="order__item-price">380&nbsp; ₽</p>
+						</li>
+						<li class="order__item">
+							<img
+								src="img/order-img-2.jpg"
+								alt="название коктеля"
+								class="order__img"
+							/>
+							<div class="order__info">
+								<h3 class="order__name">Конструктор: Банан, яблоко, киви</h3>
+								<ul class="order__topping-list">
+									<li class="order__topping-item">300мл</li>
+									<li class="order__topping-item">Пластиковый стакан</li>
+								</ul>
+							</div>
+							<button
+								class="order__item-delete"
+								type="button"
+								aria-label="удалить коктаиль из корзины"
+							></button>
+							<p class="order__item-price">520&nbsp; ₽</p>
+						</li>
+					</ul>
+
+					<div class="order__price">
+						<div class="order__price-content">
+							<p class="order__price-title">Итого:</p>
+							<p class="order__total-price text-red">950&nbsp; ₽</p>
+						</div>
+						<form class="order__form">
+							<label for="" class="order__label">
+								<input
+									type="text"
+									class="order__input"
+									placeholder="Ваше Имя"
+								/>
+							</label>
+							<label for="" class="order__label">
+								<input type="text" class="order__input" placeholder="Телефон" />
+							</label>
+							<button type="submit" class="order__submint btn">Заказать</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal modal__modal2">
+			<div class="modal__main"></div>
+		</div>
+
+		<!-- /modal -->
 	</body>
 	<!-- /body -->
 </html>
