--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
 		</footer>
 		<!-- /footer -->
 
-		<!-- modal -->
+		<!-- modal__order -->
 		<div class="modal modal__order">
-			<div class="modal__main">
+			<div class="modal__main modal__main-order">
 				<div class="order">
 					<h2 class="order__title">
 						Корзина<sup class="text-red order__calc">(2)</sup>
@@ -260,9 +260,141 @@
 				</div>
 			</div>
 		</div>
-		<div class="modal modal__modal2">
-			<div class="modal__main"></div>
+		<!-- /modal__order -->
+		<!-- modal__make -->
+		<div class="modal modal__make">
+			<div class="modal__main modal__main-make">
+				<div class="make">
+					<h3 class="make__title">
+						Собери<span class="text-red">свой</span> смузи
+					</h3>
+					<form class="make__form">
+						<fieldset class="make__fieldset make__fieldset-ingredients">
+							<label class="make__label checkbox">
+								<input
+									type="checkbox"
+									name="ingredients"
+									class="input__chekbox"
+									value="Клубника"
+								/>
+								Клубника
+							</label>
+
+							<label class="make__label checkbox">
+								<input
+									type="checkbox"
+									name="ingredients"
+									class="input__chekbox"
+									value="Киви"
+								/>
+								Киви
+							</label>
+
+							<label class="make__label checkbox">
+								<input
+									type="checkbox"
+									name="ingredients"
+									class="input__chekbox"
+									value="Банан"
+								/>
+								Банан
+							</label>
+
+							<label class="make__label checkbox">
+								<input
+									type="checkbox"
+									name="ingredients"
+									class="input__chekbox"
+									value="Маракуйя"
+								/>
+								Маракуйя
+							</label>
+
+							<label class="make__label checkbox">
+								<input
+									type="checkbox"
+									name="ingredients"
+									class="input__chekbox"
+									value="Манго"
+								/>
+								Манго
+							</label>
+
+							<label class="make__label checkbox">
+								<input
+									type="checkbox"
+									name="ingredients"
+									class="input__chekbox"
+									value="Яблоко"
+								/>
+								Яблоко
+							</label>
+						</fieldset>
+
+						<div class="make__wrap-add">
+							<fieldset class="make__fieldset make__fieldset-toppings">
+								<legent class="make__fieldset-title">Дополнительно:</legent>
+								<label class="make__label checkbox">
+									<input
+										type="checkbox"
+										name="toppings"
+										class="input__chekbox"
+										value="Мята"
+									/>
+									Мята
+									<span class="make__upsale">(+50 ₽)</span>
+								</label>
+
+								<label class="make__label checkbox">
+									<input
+										type="checkbox"
+										name="toppings"
+										class="input__chekbox"
+										value="Лед"
+									/>
+									Лед
+									<span class="make__upsale">(+10 ₽)</span>
+								</label>
+							</fieldset>
+
+							<fieldset class="make__fieldset make__fieldset-cup">
+								<legent class="make__fieldset-title">Стакан:</legent>
+								<label class="make__label radio">
+									<input
+										type="radio"
+										name="cup"
+										class="input__radio"
+										value="Биоразлагаемый"
+									/>
+									Биоразлагаемый
+									<span class="make__upsale">(+20 ₽)</span>
+								</label>
+
+								<label class="make__label radio">
+									<input
+										type="radio"
+										name="cup"
+										class="input__radio"
+										value="Пластиковый"
+									/>
+									Пластиковый
+									<span class="make__upsale">(+0 ₽)</span>
+								</label>
+							</fieldset>
+						</div>
+
+						<div class="make__footer">
+							<button class="btn make__add-btn">Добавить</button>
+							<div class="make__total">
+								<p class="make__total-price text-red">340 ₽</p>
+								<p class="make__total-size">300мл</p>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
 		</div>
+		<!-- /modal__make -->
 
 		<!-- /modal -->
 	</body>
