--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
 		</div>
 		<!-- /modal__order -->
 		<!-- modal__make -->
-		<div class="modal modal__make">
+		<div class="modal modal__make-your-own">
 			<div class="modal__main modal__main-make">
 				<div class="make">
 					<h3 class="make__title">
 						Собери <span class="text-red">свой</span> смузи
 					</h3>
-					<form class="make__form">
+					<form class="make__form make__form-your-own">
 						<fieldset class="make__fieldset make__fieldset-ingredients">
 							<label class="make__label checkbox">
 								<input
@@ -386,6 +386,81 @@
 						<div class="make__footer">
 							<button class="btn make__add-btn">Добавить</button>
 							<div class="make__total">
+								<input
+									class="maik__input maik__input-price"
+									type="hidden"
+									name="price"
+									value="150"
+								/>
+								<p class="make__total-price text-red">150 ₽</p>
+								<p class="make__total-size">300мл</p>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal modal__add">
+			<div class="modal__main modal__main-make">
+				<div class="make">
+					<h3 class="make__title">Банановый смузи</h3>
+					<form class="make__form make__form-add">
+						<div class="make__wrap-add">
+							<fieldset class="make__fieldset make__fieldset-toppings">
+								<legent class="make__fieldset-title">Дополнительно:</legent>
+								<label class="make__label checkbox">
+									<input
+										type="checkbox"
+										name="toppings"
+										class="input__chekbox"
+										value="Мята"
+									/>
+									Мята
+									<span class="make__upsale">(+50 ₽)</span>
+								</label>
+
+								<label class="make__label checkbox">
+									<input
+										type="checkbox"
+										name="toppings"
+										class="input__chekbox"
+										value="Лед"
+									/>
+									Лед
+									<span class="make__upsale">(+10 ₽)</span>
+								</label>
+							</fieldset>
+
+							<fieldset class="make__fieldset make__fieldset-cup">
+								<legent class="make__fieldset-title">Стакан:</legent>
+								<label class="make__label radio">
+									<input
+										type="radio"
+										name="cup"
+										class="input__radio"
+										value="Биоразлагаемый"
+									/>
+									Биоразлагаемый
+									<span class="make__upsale">(+20 ₽)</span>
+								</label>
+
+								<label class="make__label radio">
+									<input
+										type="radio"
+										name="cup"
+										class="input__radio"
+										value="Пластиковый"
+									/>
+									Пластиковый
+									<span class="make__upsale">(+0 ₽)</span>
+								</label>
+							</fieldset>
+						</div>
+
+						<div class="make__footer">
+							<button class="btn make__add-btn">Добавить</button>
+							<div class="make__total">
 								<p class="make__total-price text-red">340 ₽</p>
 								<p class="make__total-size">300мл</p>
 							</div>
@@ -394,6 +469,7 @@
 				</div>
 			</div>
 		</div>
+
 		<!-- /modal__make -->
 
 		<!-- /modal -->
