add coctails in cart

--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
             Собери <span class="text-red">свой</span> смузи
           </h3>
           <form class="make__form make__form-your-own">
+            <input class="make__input-title" type="text" name="title" />
             <fieldset class="make__fieldset make__fieldset-ingredients">
               <label class="make__label checkbox">
                 <input
@@ -406,7 +407,7 @@
         <div class="make">
           <h3 class="make__title">Банановый смузи</h3>
           <form class="make__form make__form-add">
-            <input class="make__input-title" type="text" name="title" />
+            <input class="make__input-title" type="hidden" name="title" />
             <div class="make__wrap-add">
               <fieldset class="make__fieldset make__fieldset-toppings">
                 <legent class="make__fieldset-title">Дополнительно:</legent>
