--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <main>
       <!-- section hero -->
       <section class="hero">
-        <div class="container">
+        <div class="container hero__container">
           <h2 class="hero__title">
             Выбери свой <span class="text-red">освежающий</span> фреш
           </h2>
@@ -122,6 +122,14 @@
                 />
               </picture>
             </div>
+          </div>
+          <div class="decor">
+            <div class="decor__img decor__img-01"></div>
+            <div class="decor__img decor__img-02"></div>
+            <div class="decor__img decor__img-03"></div>
+            <div class="decor__img decor__img-04"></div>
+            <div class="decor__img decor__img-05"></div>
+            <div class="decor__img decor__img-06"></div>
           </div>
         </div>
       </section>
